# proton-workflow-connector

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENT_BRIEF.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml  secret-scan.yml
docs/: CLIENTS.md  HOSTING.md  INTEGRATION_TESTS.md  RELEASE_CHECKLIST.md  SETUP.md  TOOLS.md  WATCH.md
examples/: claude-code-stdio.md  codex-config.toml  streamable-http.md
examples/systemd/: proton-workflow-connector-native-bridge.conf  proton-workflow-connector.service  proton-workflow-watch.service  protonmail-bridge-headless.service
plugins/proton-workflow-connector/: .mcp.json
plugins/proton-workflow-connector/.claude-plugin/: plugin.json
plugins/proton-workflow-connector/.codex-plugin/: plugin.json
plugins/proton-workflow-connector/skills/setup/: SKILL.md
scripts/: lan_transport_check.py  live_acceptance.py  live_bridge_workflow.py
src/proton_mail_mcp/: __init__.py  auth.py  config.py  html_sanitize.py  imap_client.py  mail_models.py  redaction.py  security.py  server.py  simplelogin_client.py  watch.py
tests/: test_auth.py  test_config.py  test_imap_client.py  test_mail_models.py  test_redaction.py  test_security.py  test_server.py  test_simplelogin_client.py  test_systemd_examples.py  test_watch.py
tests/fixtures/worker/: README.md  generate-jwk.mjs  wrangler.jsonc
tests/fixtures/worker/src/: index.js
