[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "proton-workflow-connector"
version = "1.3.0"
description = "Unofficial self-hosted MCP connector for Proton Mail Bridge and SimpleLogin."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "NtrpyDev" }
]
keywords = ["mcp", "proton-mail", "simplelogin", "imap", "smtp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Communications :: Email",
]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.28.1",
  "PyJWT[crypto]>=2.10",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
  "pip-audit>=2.9",
]

[project.scripts]
proton-workflow-connector = "proton_mail_mcp.server:main"
proton-mail-mcp = "proton_mail_mcp.server:main"
proton-workflow-watch = "proton_mail_mcp.watch:main"

[project.urls]
Homepage = "https://github.com/NtrpyDev/proton-workflow-connector"
Repository = "https://github.com/NtrpyDev/proton-workflow-connector"
Issues = "https://github.com/NtrpyDev/proton-workflow-connector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/proton_mail_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
